--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>my first web page</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>My first web page<br></h1>
